--- a/src/app/pages/configuration/payroll/setup/setup.html
+++ b/src/app/pages/configuration/payroll/setup/setup.html
@@ -1,4 +1,4 @@
-<div class="panel">
+<div ng-hide="isSalaryCycle" class="panel">
     <div class="panel-heading">
         <span dotranslate>Configure Payroll</span>
     </div>
@@ -20,7 +20,7 @@
                 </div>
             </a>
 
-            <a class="setup col-sm-12 complete" data-ng-click="addGeneralPayrollSetting()">
+            <a class="setup col-sm-12 complete" data-ng-click="showListGeneralPayrollSetting()">
                 <!-- data-ui-sref="configuration.payroll.setup.generalpayrollsetting" -->
                 <!-- data-ng-click="addGeneralPayrollSetting()" href="#/settings/payroll/setup/generalpayroll" -->
                 <!-- data-ng-class="{'complete':ctrl.steps.generalsettings.isCompleted,'not-started no-pointer':!ctrl.steps.generalsettings.isEnabled, 'pending':ctrl.steps.generalsettings.isCurrentstep }" -->
@@ -134,6 +134,42 @@
             </a>
 
 
+        </div>
+    </div>
+</div>
+
+<div class="panel" ng-show="isSalaryCycle">
+    <div class="panel-heading">
+        <span dotranslate>General Salary Cycle Detail</span>
+    </div>
+    <div class="panel-body ">
+        <div class="row vertical-top-margin">
+
+            <div class="col-sm-12">
+                <h6 dotranslate class="section-head-text">General Payroll Setting</h6>
+
+                <div class="col-sm-12">
+                    <div ng-repeat="emp in cycleList" class="icon-list col-offset-sm-1 col-sm-4 col-lg-3 clear-left-padding vertical-margin signatory">
+                        <div class="cursor">
+                            <div ng-click="editGeneralPayrollSetting(emp)" class="cursor">
+                                <div class="icon-container ">
+                                    <div class="icon">
+                                        <div class="initials-icon icon-circle" random-Color>{{emp.SCName.split(' ')[0].substr(0,2)}}</div>
+                                    </div>
+                                </div>
+                                <div class="detail">
+                                    <h4 class="title clear-bottom">{{emp.SCName}}</h4>
+                                    <span class="title-description clear-top">{{emp.SUName}}</span>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a href ng-click="addGeneralPayrollSetting()">
+                        <i class="fa fa-plus"></i> Add New Signatory</a>
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
