--- a/src/sass/theme/_empMain.scss
+++ b/src/sass/theme/_empMain.scss
@@ -49,7 +49,7 @@
   height: 214px;
   width: 260px;
   font-size: 104px;
-  padding: 55px 30px;
+  padding: 30px;
   border-radius: 4px;
   border-bottom-right-radius: 0;
   border-top-right-radius: 0;
