--- a/src/app/pages/team/leave/leave/approved/approved.html
+++ b/src/app/pages/team/leave/leave/approved/approved.html
@@ -1,7 +1,14 @@
 <div class="col-lg-12 clear-side-padding">
     <div class="panel">
         <div class="panel-body">
-            <div class="alert alert-success" role="alert">Hooray, no pending Leave requests for approval!</div>
+
+            <div ng-if="!noDataFound" class="col-md-12">
+
+                <div ui-grid="gridOptions" class="grid">
+                </div>
+            </div>
+
+            <div ng-if="noDataFound" class="alert alert-success" role="alert">Hooray, No Approved Leave Found!</div>
         </div>
     </div>
 </div>
