--- a/src/app/pages/team/leave/leave/pending/pending.html
+++ b/src/app/pages/team/leave/leave/pending/pending.html
@@ -1,7 +1,6 @@
-
 <div class="col-lg-12 clear-side-padding">
     <div class="panel">
-        
+
         <div class="panel-body">
             <div data-ng-if="!noDataFound" ng-repeat="leave in allLeaves">
                 <div class="col-md-12 col-sm-12 request-form profic-pic-30-30">
@@ -107,8 +106,12 @@
                         </div>
                         <!-- end ngIf: request.approvers != null -->
                         <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver">
-                            <span class="">
+                            <span class="" >
                                 <b>Requested On: </b>{{leave.CreatedOn}}</span>
+                        </div>
+                        <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver">
+                            <span class="">
+                                <b>Status: </b>{{leave.Status}}</span>
                         </div>
                         <!-- ngIf: request.documentProofs.length > 0 -->
                     </div>
@@ -237,6 +240,3 @@
         </div>
     </div>
 </div>
-
-
-
