--- a/src/app/pages/configuration/employees/bankbranch/bankbranch.html
+++ b/src/app/pages/configuration/employees/bankbranch/bankbranch.html
@@ -12,7 +12,7 @@
     <div class="panel-body">
         <div class="row">
             <div class="col-md-9">
-                <p class="text-description" dotranslate>Here you can manage the Sub Unit of the Organization. You can assign Sub Unit to employees later.
+                <p class="text-description" dotranslate>Here you can manage the Bank of the Employee. You can assign Bank to Employee later.
                 </p>
             </div>
         </div>
