--- a/src/app/pages/configuration/employees/retionsheep/retionsheep.html
+++ b/src/app/pages/configuration/employees/retionsheep/retionsheep.html
@@ -8,11 +8,11 @@
     </div>
 </div>
  -->
-<div class="panel">
+ <div class="panel">
     <div class="panel-body">
         <div class="row">
             <div class="col-md-9">
-                <p class="text-description" dotranslate>Here you can manage the Sub Unit of the Organization. You can assign Sub Unit to employees later.
+                <p class="text-description" dotranslate>Here you can manage the Relation of the Employee. You can assign Relation to Employee later.
                 </p>
             </div>
         </div>
