--- a/src/app/pages/configuration/leaveholiday/leavetype/leavetype.html
+++ b/src/app/pages/configuration/leaveholiday/leavetype/leavetype.html
@@ -12,7 +12,7 @@
     <div class="panel-body">
         <div class="row">
             <div class="col-md-9">
-                <p class="text-description" dotranslate>Here you can manage the Sub Unit of the Organization. You can assign Sub Unit to employees later.
+                <p class="text-description" dotranslate>Here you can manage the Leave type of the Leave. You can add new leave type for Leave later.
                 </p>
             </div>
         </div>
