--- a/src/app/pages/configuration/company/designation/edit-designation.html
+++ b/src/app/pages/configuration/company/designation/edit-designation.html
@@ -11,7 +11,7 @@
                 <div class="col-sm-12 clear-left-padding">
                     <div class="col-sm-8">
                         <div class="form-group">
-                            <label dotranslate>Name Of Desination</label>
+                            <label dotranslate>Name Of Designation</label>
                             <input type="text" class="form-control" ng-model="entity.DesgName" name="DesgName" id="DesgName" required />
 
                             <span class="validation-msg" validation-messages="" model-controller="bankDetails.bank" required-error="Name is required"
