--- a/src/app/pages/configuration/company/legal/edit-bank-account.html
+++ b/src/app/pages/configuration/company/legal/edit-bank-account.html
@@ -40,7 +40,7 @@
                 <div class="col-sm-12 clear-left-padding">
                     <div class="col-sm-8">
                         <div class="form-group">
-                            <label>IFS Code</label>
+                            <label>IFSC Code</label>
                             <input type="text" class="form-control" data-ng-model="entity.BADIFSCCode" name="bankIfsc" id="bankIfsc" />
                             <span class="validation-msg" data-validation-messages="" data-model-controller="bankDetails.bankIfsc" data-required-error="IFSC Code is required"
                                 data-form-submit="bankDetails.$submitted"></span>
