--- a/src/app/pages/configuration/company/legal/legal.html
+++ b/src/app/pages/configuration/company/legal/legal.html
@@ -319,7 +319,7 @@
                                     </div>
 
                                 </uib-tab>
-                                <uib-tab heading="Providund Fund Detail">
+                                <uib-tab heading="Provident Fund Detail">
                                     <br/>
                                     <div class="row">
                                         <div class="col-sm-10">
