--- a/src/app/common/components/topNav/topNav.html
+++ b/src/app/common/components/topNav/topNav.html
@@ -1,8 +1,8 @@
 <div>
     <div class="sub-page-navigation">
         <ul>
-            <li ng-repeat="state in localState" data-ui-sref-active="active" class="active">
-                <a class="anchor-sm" data-ui-sref="{{state.stateRef}}" href>{{state.title}}</a>
+            <li ng-repeat="state in localState" ui-sref-active="active" class="active">
+                <a class="anchor-sm" ui-sref="{{state.stateRef}}">{{state.title}}</a>
             </li>
 
         </ul>
