--- a/src/app/pages/configuration/configure.html
+++ b/src/app/pages/configuration/configure.html
@@ -67,7 +67,7 @@
                         </a>
                     </li>
 
-                    <li id="timesheet" ui-sref-active="active" data-xhr-feature-authorize="" data-feature="TIMESHEET" class="ng-scope">
+                    <!-- <li id="timesheet" ui-sref-active="active" data-xhr-feature-authorize="" data-feature="TIMESHEET" class="ng-scope">
                         <a ui-sref="configuration.timesheet" href="#/configuration/timesheet">
                             <span class="subnav-item-title">Timesheet</span>
                             <br>
@@ -116,7 +116,7 @@
                                 <span class="icon-arrow-right-2"></span>
                             </span>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
 
             </div>
