--- a/src/app/pages/configuration/loanadvance/loanprovider/loanprovider.html
+++ b/src/app/pages/configuration/loanadvance/loanprovider/loanprovider.html
@@ -12,7 +12,7 @@
     <div class="panel-body">
         <div class="row">
             <div class="col-md-9">
-                <p class="text-description" dotranslate>Here you can manage the Holiday of the Holiday. You can assign Holiday to holiday Configuration By Location later.
+                <p class="text-description" dotranslate>Here you can manage the Loan Provider of the Loan. You can assign Loan Provider to Loan Type later.
                 </p>
             </div>
         </div>
