--- a/src/app/pages/configuration/loanadvance/advancerule/advancerule.html
+++ b/src/app/pages/configuration/loanadvance/advancerule/advancerule.html
@@ -12,7 +12,7 @@
     <div class="panel-body">
         <div class="row">
             <div class="col-md-9">
-                <p class="text-description" dotranslate>Here you can manage the Holiday of the Holiday. You can assign Holiday to holiday Configuration By Location later.
+                <p class="text-description" dotranslate>Here you can manage the Advance Rule of the Advance Application. You can assign Advance Type to Advance Application later.
                 </p>
             </div>
         </div>
