--- a/src/app/pages/configuration/loanadvance/loantype/loantype.html
+++ b/src/app/pages/configuration/loanadvance/loantype/loantype.html
@@ -12,7 +12,7 @@
     <div class="panel-body">
         <div class="row">
             <div class="col-md-9">
-                <p class="text-description" dotranslate>Here you can manage the Holiday of the Holiday. You can assign Holiday to holiday Configuration By Location later.
+                <p class="text-description" dotranslate>Here you can manage the Loan Type of the Loan Category Rule. You can assign Loan Type to Loan Category Rule later.
                 </p>
             </div>
         </div>
