--- a/src/app/pages/team/leave/compoff/approved/approved.html
+++ b/src/app/pages/team/leave/compoff/approved/approved.html
@@ -1,7 +1,117 @@
 <div class="col-lg-12 clear-side-padding">
     <div class="panel">
+
         <div class="panel-body">
-            <div class="alert alert-success" role="alert">Hooray, no pending Leave requests for approval!</div>
+            <div data-ng-if="!noDataFound" ng-repeat="leave in allCompOffs">
+                <div class="col-md-12 col-sm-12 request-form approved profic-pic-30-30">
+
+
+                    <div class="col-lg-11 col-md-11 col-sm-11  clear-side-padding pending-leave internal-padding" data-ng-init="collpase = true">
+                        <div class="member-profile-picture-container profile-picture-container col-lg-1 clear-side-padding col-md-2">
+                            <!-- ngIf: request.requestedBy.profileImageUrl -->
+                            <!-- ngIf: !request.requestedBy.profileImageUrl -->
+                            <div class="profile-picture  ng-isolate-scope">
+                                <div random-Color class="img-circle img-initials " data-ng-style="{'background-color':getRandomColor(index)}" style="background-color: rgb(158, 105, 175);">
+                                    {{leave.shortName}}
+                                </div>
+                            </div>
+                            <!-- end ngIf: !request.requestedBy.profileImageUrl -->
+                        </div>
+                        <div class="leave-details col-lg-8 col-md-8 col-sm-8 clear-side-padding">
+                            <p class="leave-requestor">
+                                <b>
+                                    <a class="aDisplayName " data-ui-sref="employee.summary({empid:leave.EmpId})">{{leave.EmpName}}</a>
+                                </b>
+                            </p>
+                            <!-- ngIf: !request.isCompOffRequest -->
+                            <span data-ng-if="!request.isCompOffRequest" class=" ">
+                                <b>Leave Type: </b>{{leave.Type}}</span>
+                            <!-- end ngIf: !request.isCompOffRequest -->
+
+                        </div>
+                        <div class="col-lg-2 col-md-2 col-sm-2 request-calender clear-side-padding">
+                            <span class="month-view">
+                                <!-- ngIf: (request.fromDate | date:'MMM') !== (request.toDate | date:'MMM') -->
+                                <!-- ngIf: (request.fromDate | date:'MMM') == (request.toDate | date:'MMM') -->
+                                <span data-ng-if="(request.fromDate | date:'MMM') == (request.toDate | date:'MMM')" class="">
+                                    <b class="">
+                                        <span class="dot">.</span> {{leave.monthName}}
+                                        <span class="dot">.</span>
+                                    </b>
+                                </span>
+                                <!-- end ngIf: (request.fromDate | date:'MMM') == (request.toDate | date:'MMM') -->
+                            </span>
+
+                            <!-- ngIf: (request.fromDate | date:'ddMMM') !== (request.toDate | date:'ddMMM') -->
+                            <span class="date-view ">
+                                <span class="date-text text-center">
+                                    <ul>
+                                        <li>
+                                            <span class="day">
+                                                <b class="">{{leave.dateFrom}}</b>
+                                            </span>
+
+                                        </li>
+                                        <li>
+                                            <span class="week">
+                                                <b class="">{{leave.dayFromName}}</b>
+                                            </span>
+
+                                        </li>
+
+
+                                    </ul>
+
+                                </span>
+
+                            </span>
+
+
+                            <!-- end ngIf: (request.fromDate | date:'ddMMM') !== (request.toDate | date:'ddMMM') -->
+                            <!-- ngIf: (request.fromDate | date:'ddMMM') == (request.toDate | date:'ddMMM') -->
+                        </div>
+                        <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding">
+                            <span class="leave-note ">
+                                <b>Applier Reason: </b>{{leave.COReson}}</span>
+                        </div>
+                        <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding">
+                            <span class="leave-note ">
+                                <b>TimeIn: </b>{{leave.COTimeIn}}</span>
+                        </div>
+                        <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding">
+                            <span class="leave-note ">
+                                <b>TimeOut: </b>{{leave.COTimeOut}}</span>
+                        </div>
+                        <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver">
+                            <span class="">
+                                <b>Requested On: </b>{{leave.CreatedOn}}</span>
+                        </div>
+                        <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver ">
+                            <a class="approver-name information-tooltip tooltip-grey inline-block " data-uib-tooltip="{{leave.HeadEmpName}}" tooltip-placement="top">
+                                <b>Approved By: </b> {{leave.ApprovedBy}}</a>
+                        </div>
+
+                        <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver">
+                            <span class="">
+                                <b>Approver Comment: </b> {{leave.COAdminComment}}</span>
+                        </div>
+                        <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver">
+                            <span class="">
+                                <b>Approved On: </b> {{leave.ModifiedOn}}</span>
+                        </div>
+                        <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver">
+                            <span class="">
+                                <b>Status: </b>{{leave.Status}}</span>
+                        </div>
+                        <!-- ngIf: request.documentProofs.length > 0 -->
+                    </div>
+
+                </div>
+
+            </div>
+            <div data-ng-if="noDataFound" class="alert alert-success" role="alert">Hooray, No approved compoff leaves found !</div>
+
+
         </div>
     </div>
 </div>
