--- a/src/app/pages/team/leave/leave/onhold/onhold.html
+++ b/src/app/pages/team/leave/leave/onhold/onhold.html
@@ -4,12 +4,13 @@
             <div class="col-lg-12 clear-side-padding">
 
                 <div data-ng-if="!noDataFound" ng-repeat="leave in allLeaves">
-                    <div class="col-md-12 col-sm-12 request-form profic-pic-30-30">
+                    <div class="col-md-12 col-sm-12 request-form onhold profic-pic-30-30">
                         <span class="pull-right collpase" data-ng-click="collpase = !collpase">
                             <i ng-class="{'fa fa-angle-down':!collpase, 'fa fa-angle-up' : collpase}" class="collpase-icon fa fa-angle-up"></i>
                         </span>
 
-                        <div class="col-lg-11 col-md-11 col-sm-11  clear-side-padding pending-leave internal-padding" data-ng-init="collpase = true">
+                        <div data-ng-click="collpase = !collpase" class="col-lg-11 col-md-11 col-sm-11  clear-side-padding pending-leave internal-padding"
+                            data-ng-init="collpase = true">
                             <div class="member-profile-picture-container profile-picture-container col-lg-1 clear-side-padding col-md-2">
                                 <!-- ngIf: request.requestedBy.profileImageUrl -->
                                 <!-- ngIf: !request.requestedBy.profileImageUrl -->
@@ -98,21 +99,26 @@
                             </div>
                             <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding">
                                 <span class="leave-note ">
-                                    <b>Reason: </b>{{leave.LeadComment}}</span>
+                                    <b>Applier Reason: </b>{{leave.LeadComment}}</span>
                             </div>
-                            <!-- ngIf: request.approvers != null -->
-                            <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver ">
-                                <a class="approver-name information-tooltip tooltip-grey inline-block " data-uib-tooltip="{{leave.HeadEmpName}}" tooltip-placement="top">
-                                    <b>Approver By: </b> {{leave.ApprovedBy}}</a>
-                            </div>
-                            <!-- end ngIf: request.approvers != null -->
+
                             <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver">
                                 <span class="">
                                     <b>Requested On: </b>{{leave.CreatedOn}}</span>
                             </div>
+                            <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver ">
+                                <a class="approver-name information-tooltip tooltip-grey inline-block " data-uib-tooltip="{{leave.HeadEmpName}}" tooltip-placement="top">
+                                    <b>Onhold By: </b> {{leave.ApprovedBy}}</a>
+                            </div>
+                            <!-- end ngIf: request.approvers != null -->
+
                             <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver">
                                 <span class="">
-                                    <b>Approved On: </b>{{leave.ModifiedOn}}</span>
+                                    <b>Onhold On: </b>{{leave.ModifiedOn}}</span>
+                            </div>
+                            <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver">
+                                <span class="">
+                                    <b>Approver Comment: </b>{{leave.LEADAdminComment}}</span>
                             </div>
                             <div class="col-lg-8 col-md-9 col-sm-9 clear-side-padding leave-approver">
                                 <span class="">
@@ -153,7 +159,7 @@
 
                                     <input type="button" class="btn btn-danger btn-raised" value="Reject" uib-popover-template="'reject-reason-template'" popover-placement="top-right"
                                         popover-is-open="" popover-append-to-body="true" popover-trigger="outsideClick">
-                            
+
                                 </div>
                             </div>
                         </div>
@@ -204,7 +210,7 @@
                     </div>
 
                 </div>
-                <div data-ng-if="noDataFound" class="alert alert-success" role="alert">Hooray, no onhold Leave requests for approval!</div>
+                <div data-ng-if="noDataFound" class="alert alert-success" role="alert">Hooray, no onhold leave requests for approval!</div>
             </div>
         </div>
     </div>
